--- a/html/bookkeeping.html
+++ b/html/bookkeeping.html
@@ -4,19 +4,13 @@
     <meta charset='utf-8' />
     <link href='../node_modules/fullcalendar/main.css' rel='stylesheet' />
     <script src='../node_modules/fullcalendar/main.js'></script>
-    <script>
-
-      document.addEventListener('DOMContentLoaded', function() {
-        var calendarEl = document.getElementById('calendar');
-        var calendar = new FullCalendar.Calendar(calendarEl, {
-          initialView: 'dayGridMonth'
-        });
-        calendar.render();
-      });
-
-    </script>
+    <link href='https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.css' rel='stylesheet' />
+    <link href='https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.13.1/css/all.css' rel='stylesheet'>
+    <link href="../css/bookkeeping.css" rel="stylesheet"/>
+    <script src="./test.js"></script>
   </head>
   <body>
     <div id='calendar'></div>
+    
   </body>
 </html>
